Removed unnecessary things from the example template and improved