@@ -2,16 +2,14 @@ package devjg.storagecarpet;
 
 import carpet.CarpetExtension;
 import carpet.CarpetServer;
-import carpet.api.settings.SettingsManager;
-import carpet.utils.Messenger;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 import com.mojang.brigadier.CommandDispatcher;
+import devjg.storagecarpet.commands.ExampleCommand;
 import net.fabricmc.api.ModInitializer;
 import net.minecraft.command.CommandRegistryAccess;
 import net.minecraft.server.command.ServerCommandSource;
-import org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -21,37 +19,18 @@ import java.util.Map;
 
 public class STCExtension implements CarpetExtension, ModInitializer
 {
-    public static void noop() { }
-    private static SettingsManager mySettingManager;
-    static
-    {
-        mySettingManager = new SettingsManager("1.0", "storagecarpet", "StorageCarpet");
+    public static String MOD_ID = "storagecarpet";
+
+    @Override
+    public void onInitialize() {
         CarpetServer.manageExtension(new STCExtension());
     }
 
     @Override
     public void onGameStarted()
     {
-        // let's /carpet handle our few simple settings
         CarpetServer.settingsManager.parseSettingsClass(STCSimpleSettings.class);
         CarpetServer.settingsManager.parseSettingsClass(STCOwnSettings.class);
-        // Lets have our own settings class independent from carpet.conf
-//        mySettingManager.parseSettingsClass(STCSimpleSettings.class);
-//        mySettingManager.parseSettingsClass(STCOwnSettings.class);
-
-        // set-up a snooper to observe how rules are changing in carpet
-        CarpetServer.settingsManager.registerRuleObserver( (serverCommandSource, currentRuleState, originalUserTest) ->
-        {
-            if (currentRuleState.categories().contains("storagecarpet"))
-            {
-                Messenger.m(serverCommandSource,"gi Psssst... make sure not to change not to touch original carpet rules");
-                // obviously you can change original carpet rules
-            }
-            else
-            {
-                Messenger.print_server_message(serverCommandSource.getServer(), "Ehlo everybody, "+serverCommandSource.getPlayer().getName().getString()+" is cheating...");
-            }
-        });
     }
 
     @Override
@@ -61,20 +40,8 @@ public class STCExtension implements CarpetExtension, ModInitializer
     }
 
     @Override
-    public SettingsManager extensionSettingsManager()
-    {
-        // this will ensure that our settings are loaded properly when world loads
-        return mySettingManager;
-    }
-
-    @Override
     public String version() {
-        return "storagecarpet";
-    }
-
-    @Override
-    public void onInitialize() {
-        CarpetServer.manageExtension(new STCExtension());
+        return MOD_ID;
     }
 
     @Override
@@ -85,18 +52,18 @@ public class STCExtension implements CarpetExtension, ModInitializer
 
     public static Map<String, String> getTranslationFromResourcePath(String lang)
     {
-        InputStream langFile = STCExtension.class.getClassLoader().getResourceAsStream("assets/storagecarpet/lang/%s.json".formatted(lang));
-        if (langFile == null) {
-            // we don't have that language
-            return Collections.emptyMap();
-        }
-        String jsonData;
-        try {
-            jsonData = IOUtils.toString(langFile, StandardCharsets.UTF_8);
+        String langFilePath = "assets/" + MOD_ID + "/lang/%s.json".formatted(lang);
+
+        try (InputStream langFile = STCExtension.class.getClassLoader().getResourceAsStream(langFilePath)) {
+            if (langFile == null)
+                return Collections.emptyMap();
+
+            String jsonData = new String(langFile.readAllBytes(), StandardCharsets.UTF_8);
+            Gson gson = new GsonBuilder().create();
+
+            return gson.fromJson(jsonData, new TypeToken<Map<String, String>>() {}.getType());
         } catch (IOException e) {
             return Collections.emptyMap();
         }
-        Gson gson = new GsonBuilder().setLenient().create(); // lenient allows for comments
-        return gson.fromJson(jsonData, new TypeToken<Map<String, String>>() {}.getType());
     }
 }
